[package]
name = "fisco_ledger"
version = "0.1.0"
edition = "2021"

[workspace]

# Step 4 — Rust Ledger Client
# Sends transactions to LoanLedger (Type A) and RepaymentLedger (Type B)
# contracts on a local FISCO BCOS 3.x chain via JSON-RPC over HTTP.

[dependencies]
reqwest  = { version = "0.11", features = ["json", "native-tls"] }
serde    = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
hex      = "0.4"
anyhow   = "1.0"
tokio    = { version = "1.32", features = ["full"] }
sha3     = "0.10"   # keccak256 for ABI selectors and tx hash
sha2     = "0.9"    # SHA-256 for payload hash verification (Step 7)
k256     = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }   # secp256k1 signing
rand     = "0.8"    # random nonce generation
log      = "0.4"
env_logger = "0.10"
message = { path = "../message" }
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "ledger_demo"
path = "src/bin/demo.rs"

[[bin]]
name = "query_demo"
path = "src/bin/query_demo.rs"

[[bin]]
name = "size_demo"
path = "src/bin/size_demo.rs"

[[bin]]
name = "tps_bench"
path = "src/bin/tps_bench.rs"


