[package]
name = "sui_ledger"
version = "0.1.0"
edition = "2021"

[workspace]

# Sui (Mysticeti DAG-BFT) ledger client.
#
# Mirrors fisco_ledger/ but targets a Sui localnet instead of FISCO-BCOS.
# All crypto types come from the shared `message` crate — only the
# blockchain transport layer (JSON-RPC, signing, tx encoding) changes.
#
# Lightweight: uses raw JSON-RPC + ed25519-dalek + blake2 instead of the
# heavy `sui-sdk` crate, keeping compile times fast.

[dependencies]
reqwest       = { version = "0.11", features = ["json"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
hex           = "0.4"
anyhow        = "1.0"
tokio         = { version = "1.32", features = ["full"] }
log           = "0.4"
env_logger    = "0.10"
clap          = { version = "4.5", features = ["derive"] }
rand          = "0.8"
base64        = "0.22"
blake2        = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
message       = { path = "../message" }

[[bin]]
name = "sui_tps_bench"
path = "src/bin/tps_bench.rs"
